# django-shared-cash-boxes

./: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg
shared_cash_boxes/: admin.py  apps.py  forms.py  models.py  tables.py  urls.py  views.py
shared_cash_boxes/migrations/: 0001_initial.py
shared_cash_boxes/templates/shared_cash_boxes/: cash_boxes_overview.html  invoice_list.html  invoice_submission.html  search.html  transaction_list.html  user_overview.html
