[metadata]
name = django-shared-cash-boxes
version = 0.1
description = A Django app to manage shared cash boxes.
long_description = file: README.rst
url = https://github.com/hd1ex/shared-cash-boxes
author = Alexander Sommer
author_email = git@alexandersommer.eu
license = AGPLv3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: AGPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

